--- a/src/sections/Header/Header.css
+++ b/src/sections/Header/Header.css
@@ -4,7 +4,7 @@
   /* top: 0; */
   position: sticky;
   top: 0;
-  background-color: white;
+  background-color: rgb(240, 237, 237);
   border-bottom: 1px solid #ccc;
   z-index: 1000;
 }
@@ -27,6 +27,10 @@
 .header nav ul li {
   margin: 0 15px;
   cursor: pointer;
+  font-size: medium;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 3px;
 }
 
 .add-to-week {
