--- a/src/sections/MealBanner/MealBanner.css
+++ b/src/sections/MealBanner/MealBanner.css
@@ -5,6 +5,7 @@
     background-size: cover;
     color: white;
     text-align: center;
+    opacity:0.7;
   }
   
   .sticky {
